--- a/calculator/calculator.css
+++ b/calculator/calculator.css
@@ -1,12 +1,35 @@
-.main{ padding: 30px; display: flex; align-items: center; text-align: center;
-
+.main { 
+    padding: 30px;
+    display: flex;
+    align-items: center;
+    text-align: center;
     justify-content: center;
+    background: #111010;
+    color: rgb(255, 255, 255);
     }
     
-    input{ padding: 20px 17px; margin: 15px 20px; font-size: 20px; border: 2px solid black; border-radius: 9px; text-align: right; }
-    
-    .button-container{ width: auto; align-items: center; justify-content: center; }
-    
-    .button-row{ margin: 10px; }
-    
-    button{ width: 60px; height: 60px; margin: 2px 5px; font-size: large; border: 2px solid black; border-radius: 9px; }
+input{
+    padding: 20px 17px; 
+     margin: 15px 20px; 
+     font-size: 20px; 
+     border: 2px solid rgb(255, 255, 255);
+     border-radius: 9px; 
+     text-align: right; }
+
+.button-container{ 
+    width: auto; 
+    align-items: center; 
+    justify-content: center; 
+}
+
+.button-row{ 
+    margin: 10px; 
+}
+
+button{ 
+    width: 60px; 
+    height: 60px; 
+    margin: 2px 5px; 
+    font-size: large; 
+    border: 2px solid rgb(252, 252, 252); 
+    border-radius: 9px; }
