--- a/Product-cart/product.css
+++ b/Product-cart/product.css
@@ -13,12 +13,14 @@ table {
     margin: -20px 10px;
 }
 
-#header p{
-    padding-top: 20px;
+#header a{
+    padding-top: 35px;
     font-size: larger;
     padding-right: 10px;
     font-weight: bold;
     cursor: pointer;
+    color: black;
+    text-decoration: none;
 }
 
 /* h1{
